Fix blockquote wrap/unwrap

--- a/app/javascript/booklab/editor/index.scss
+++ b/app/javascript/booklab/editor/index.scss
@@ -211,7 +211,6 @@
 
     .attachment-file {
       cursor: pointer;
-
     }
 
     [data-active=true] {
@@ -219,6 +218,16 @@
       hr {
         background: $primary;
       }
+    }
+
+    .CodeMirror {
+      padding: 16px;
+      overflow: auto;
+      font-size: 85%;
+      line-height: 1.45;
+      background-color: #f6f8fa;
+      border-radius: 3px;
+      font-family: Monaco, monospace;
     }
   }
 
